examples/errors/parsing/pattern_match.cn
type List(a) = { Nil : () | Cons : (a * Ptr List(a)) }

fun head : List(Int) -> Int [pure] = {
    Nil u -> 0
  | Cons (x, rest) -> x
}

fun sumPair : (Int * Int) -> Int [pure] = {
  (a, b) -> a + b
}

main : () [impure] =
  let xs = (Cons (42, New[List(Int)] (Nil () : List(Int))) : List(Int));
  let h = head xs;
  let s = sumPair (h, 1);
  ()
